k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: openq
spec:
  selector:
    app: openq
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8090
