k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: default
  name: openq
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: development.openq.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openq
                port:
                  number: 8090
    - host: staging.openq.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openq
                port:
                  number: 8090
    - host: production.openq.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: openq
                port:
                  number: 8090
  tls:
    - hosts:
        - "*.openq.dev"
      secretName: ssl-cert
